clang/test/BSC/Method/ambiguous_3.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

short short int::getA() { // expected-error {{ambiguous declaration of BSCMethod}}
  return 1;
};

int main() {
  return 0;
};
